<resources>
    <string name="app_name">proyecto1</string>
    <string name="login">Iniciar Sesión</string>
    <string name="textView_login">Inicio de sesión</string>
    <string name="signup">Registrarse</string>
    <string name="textView_signup">Registrar</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="menu_title">Bienvenido a Universe Go</string>
    <string name="menu_planet">Planetas</string>
    <string name="menu_star">Estrellas</string>
    <string name="menu_meteor">Meteoritos</string>
    <string name="menu_cometa">Cometas</string>
    <string name="menu_foro">Foro</string>
    <string name="planeta_title">Planetas</string>
    <string name="planeta_mercurio">Mercurio</string>
    <string name="planeta_venus">Venus</string>
    <string name="planeta_tierra">Tierra</string>
    <string name="planeta_marte">Marte</string>
    <string name="planeta_jupiter">Jupiter</string>
    <string name="carga_titulo">Agregar un titulo...</string>
    <string name="carga_foto">Agregar una imagen...</string>
    <string name="carga_texto">Agregar Texto...</string>
    <string name="carga_fuente">Fuente...</string>
    <string name="carga_post"> Publicar </string>
    <string name="carga_back">Volver atrás</string>

</resources>